--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -104,44 +104,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "17"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
     }
    ],
    "source": [
     "# This a simple arithmetic expression to mutiply then add integers.\n",
-    "(3*4)+5"
+    "eval = (3*4)+5\n",
+    "print(eval)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.3333333333333335"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3333333333333335\n"
+     ]
     }
    ],
    "source": [
     "# This will convert 200 minutes to hours by diving by 60.\n",
-    "200/60"
+    "print(200/60)"
    ]
   },
   {
