--- a/04 jupyter-labs-eda-sql-coursera_sqllite.ipynb
+++ b/04 jupyter-labs-eda-sql-coursera_sqllite.ipynb
@@ -66,12 +66,12 @@
      "text": [
       "Collecting sqlalchemy==1.4.1\n",
       "  Downloading SQLAlchemy-1.4.1.tar.gz (7.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.5/7.5 MB\u001b[0m \u001b[31m97.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.5/7.5 MB\u001b[0m \u001b[31m79.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
       "  Preparing metadata (setup.py) ... \u001b[?2done\n",
       "\u001b[?25hRequirement already satisfied: greenlet!=0.4.17 in /opt/conda/lib/python3.12/site-packages (from sqlalchemy==1.4.1) (3.1.1)\n",
       "Building wheels for collected packages: sqlalchemy\n",
       "  Building wheel for sqlalchemy (setup.py) ..done\n",
-      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.4.1-cp312-cp312-linux_x86_64.whl size=1449006 sha256=4b9a6e0e71abfd30962089264c64917acc8cef3c3344f6ef8704ad9be9ed3dcb\n",
+      "\u001b[?25h  Created wheel for sqlalchemy: filename=SQLAlchemy-1.4.1-cp312-cp312-linux_x86_64.whl size=1449006 sha256=e102256efdcd92390b618a47ab3c6d34534e6513138b820e987817b49dba3ef0\n",
       "  Stored in directory: /home/jupyterlab/.cache/pip/wheels/78/ee/63/094bdfbb361a98aba77e1d4d5794c4c55b6dcdf5f888319e55\n",
       "Successfully built sqlalchemy\n",
       "Installing collected packages: sqlalchemy\n",
@@ -99,22 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting ipython-sql\n",
-      "  Downloading ipython_sql-0.5.0-py3-none-any.whl.metadata (17 kB)\n",
-      "Collecting prettytable (from ipython-sql)\n",
-      "  Downloading prettytable-3.16.0-py3-none-any.whl.metadata (33 kB)\n",
+      "Requirement already satisfied: ipython-sql in /opt/conda/lib/python3.12/site-packages (0.5.0)\n",
+      "Requirement already satisfied: prettytable in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (3.16.0)\n",
       "Requirement already satisfied: ipython in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (8.31.0)\n",
-      "Collecting sqlalchemy>=2.0 (from ipython-sql)\n",
-      "  Downloading sqlalchemy-2.0.40-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.6 kB)\n",
-      "Collecting sqlparse (from ipython-sql)\n",
-      "  Downloading sqlparse-0.5.3-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Requirement already satisfied: sqlalchemy>=2.0 in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (2.0.40)\n",
+      "Requirement already satisfied: sqlparse in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (0.5.3)\n",
       "Requirement already satisfied: six in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (1.17.0)\n",
       "Requirement already satisfied: ipython-genutils in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (0.2.0)\n",
       "Requirement already satisfied: greenlet>=1 in /opt/conda/lib/python3.12/site-packages (from sqlalchemy>=2.0->ipython-sql) (3.1.1)\n",
@@ -133,17 +129,6 @@
       "Requirement already satisfied: executing>=1.2.0 in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (2.1.0)\n",
       "Requirement already satisfied: asttokens>=2.1.0 in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (3.0.0)\n",
       "Requirement already satisfied: pure_eval in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (0.2.3)\n",
-      "Downloading ipython_sql-0.5.0-py3-none-any.whl (20 kB)\n",
-      "Downloading sqlalchemy-2.0.40-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.3 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m126.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "Downloading prettytable-3.16.0-py3-none-any.whl (33 kB)\n",
-      "Downloading sqlparse-0.5.3-py3-none-any.whl (44 kB)\n",
-      "Installing collected packages: sqlparse, sqlalchemy, prettytable, ipython-sql\n",
-      "  Attempting uninstall: sqlalchemy\n",
-      "    Found existing installation: SQLAlchemy 1.4.1\n",
-      "    Uninstalling SQLAlchemy-1.4.1:\n",
-      "      Successfully uninstalled SQLAlchemy-1.4.1\n",
-      "Successfully installed ipython-sql-0.5.0 prettytable-3.16.0 sqlalchemy-2.0.40 sqlparse-0.5.3\n",
       "Requirement already satisfied: ipython-sql in /opt/conda/lib/python3.12/site-packages (0.5.0)\n",
       "Requirement already satisfied: prettytable in /opt/conda/lib/python3.12/site-packages (3.16.0)\n",
       "Requirement already satisfied: ipython in /opt/conda/lib/python3.12/site-packages (from ipython-sql) (8.31.0)\n",
@@ -166,27 +151,43 @@
       "Requirement already satisfied: ptyprocess>=0.5 in /opt/conda/lib/python3.12/site-packages (from pexpect>4.3->ipython->ipython-sql) (0.7.0)\n",
       "Requirement already satisfied: executing>=1.2.0 in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (2.1.0)\n",
       "Requirement already satisfied: asttokens>=2.1.0 in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (3.0.0)\n",
-      "Requirement already satisfied: pure_eval in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (0.2.3)\n"
+      "Requirement already satisfied: pure_eval in /opt/conda/lib/python3.12/site-packages (from stack_data->ipython->ipython-sql) (0.2.3)\n",
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.12/site-packages (2.2.3)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /opt/conda/lib/python3.12/site-packages (from pandas) (2.2.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/conda/lib/python3.12/site-packages (from pandas) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /opt/conda/lib/python3.12/site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
      ]
     }
    ],
    "source": [
     "!pip install ipython-sql\n",
-    "!pip install ipython-sql prettytable"
+    "!pip install ipython-sql prettytable\n",
+    "!pip install pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext sql"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,16 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install -q pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +219,7 @@
        "101"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +256,7 @@
        "[]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +286,7 @@
        "[]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +356,7 @@
        "[('CCAFS LC-40',), ('VAFB SLC-4E',), ('KSC LC-39A',), ('CCAFS SLC-40',)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +480,7 @@
        " ('2013-03-01', '15:10:00', 'F9 v1.0  B0007', 'CCAFS LC-40', 'SpaceX CRS-2', 677, 'LEO (ISS)', 'NASA (CRS)', 'Success', 'No attempt')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +535,7 @@
        "[(45596,)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +590,7 @@
        "[(2928.4,)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +645,7 @@
        "[('2015-12-22',)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +706,7 @@
        "[('F9 FT B1022',), ('F9 FT B1026',), ('F9 FT  B1021.2',), ('F9 FT  B1031.2',)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,8 +729,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Found a duplicate record with Misson Outcome = 'Success'. Applied Update query."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///my_data1.db\n",
+      "99 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "Update SPACEXTBL set Mission_Outcome = 'Success'\n",
+    "Where Mission_Outcome like 'Success%' and Mission_Outcome <> 'Success (payload status unclear)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -766,11 +795,7 @@
        "        </tr>\n",
        "        <tr>\n",
        "            <td>Success</td>\n",
-       "            <td>98</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Success </td>\n",
-       "            <td>1</td>\n",
+       "            <td>99</td>\n",
        "        </tr>\n",
        "        <tr>\n",
        "            <td>Success (payload status unclear)</td>\n",
@@ -781,12 +806,11 @@
       ],
       "text/plain": [
        "[('Failure (in flight)', 1),\n",
-       " ('Success', 98),\n",
-       " ('Success ', 1),\n",
+       " ('Success', 99),\n",
        " ('Success (payload status unclear)', 1)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -897,14 +921,15 @@
        " ('F9 B5 B1049.7 ', 15600)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "select Booster_Version, PAYLOAD_MASS__KG_ from SPACEXTBL where PAYLOAD_MASS__KG_ in (select max(PAYLOAD_MASS__KG_) from SPACEXTBL)"
+    "select Booster_Version, PAYLOAD_MASS__KG_ from SPACEXTBL \n",
+    "    where PAYLOAD_MASS__KG_ in (select max(PAYLOAD_MASS__KG_) from SPACEXTBL)"
    ]
   },
   {
@@ -921,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +990,7 @@
        " ('04 2015', 'F9 v1.1 B1015', 'Failure (drone ship)', 'CCAFS LC-40')]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1055,7 @@
        "[('Failure (drone ship)', 5, 1), ('Success (ground pad)', 3, 2)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1065,8 @@
     "select Landing_Outcome, count(Landing_Outcome) as 'Count', \n",
     "    row_number() over (order by count(Landing_Outcome) desc) as Rank\n",
     "from SPACEXTBL\n",
-    "where Date Between '2010-06-04' and '2017-03-20' and Landing_Outcome in ('Failure (drone ship)', 'Success (ground pad)') group by Landing_Outcome"
+    "where Date Between '2010-06-04' and '2017-03-20' and Landing_Outcome in ('Failure (drone ship)', 'Success (ground pad)') \n",
+    "    group by Landing_Outcome"
    ]
   },
   {
